syntax = "proto3";

package listenfield.repo;
option csharp_namespace = "ListenField.Client.Repo";

import "google/protobuf/timestamp.proto";
import "repo/catalog-types.proto";
import "api.proto";

message UpsertFieldBoundaryRequest {
  listenfield.repo.catalog.FieldBoundary item = 1;
}

message UpsertFieldBoundaryResult {
  listenfield.repo.catalog.FieldBoundary item = 1;
}

message QueryFieldBoundaryResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.FieldBoundary item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service FieldBoundaries {
  rpc Upsert (UpsertFieldBoundaryRequest) returns (UpsertFieldBoundaryResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryFieldBoundaryResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.FieldBoundary);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertFieldRequest {
  listenfield.repo.catalog.Field item = 1;
}

message UpsertFieldResult {
  listenfield.repo.catalog.Field item = 1;
}

message QueryFieldResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.Field item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service Fields {
  rpc Upsert (UpsertFieldRequest) returns (UpsertFieldResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryFieldResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.Field);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertFarmRequest {
  listenfield.repo.catalog.Farm item = 1;
}

message UpsertFarmResult {
  listenfield.repo.catalog.Farm item = 1;
}

message QueryFarmResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.Farm item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service Farms {
  rpc Upsert (UpsertFarmRequest) returns (UpsertFarmResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryFarmResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.Farm);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertGrowerRequest {
  listenfield.repo.catalog.Grower item = 1;
}

message UpsertGrowerResult {
  listenfield.repo.catalog.Grower item = 1;
}

message QueryGrowerResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.Grower item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service Growers {
  rpc Upsert (UpsertGrowerRequest) returns (UpsertGrowerResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryGrowerResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.Grower);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertCropRequest {
  listenfield.repo.catalog.Crop item = 1;
}

message UpsertCropResult {
  listenfield.repo.catalog.Crop item = 1;
}

message QueryCropResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.Crop item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service Crops {
  rpc Upsert (UpsertCropRequest) returns (UpsertCropResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryCropResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.Crop);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertCropZoneRequest {
  listenfield.repo.catalog.CropZone item = 1;
}

message UpsertCropZoneResult {
  listenfield.repo.catalog.CropZone item = 1;
}

message QueryCropZoneResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.CropZone item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service CropZones {
  rpc Upsert (UpsertCropZoneRequest) returns (UpsertCropZoneResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryCropZoneResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.CropZone);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertContactInfoRequest {
  listenfield.repo.catalog.ContactInfo item = 1;
}

message UpsertContactInfoResult {
  listenfield.repo.catalog.ContactInfo item = 1;
}

message QueryContactInfoResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.ContactInfo item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service ContactInfos {
  rpc Upsert (UpsertContactInfoRequest) returns (UpsertContactInfoResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryContactInfoResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.ContactInfo);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertPersonRequest {
  listenfield.repo.catalog.Person item = 1;
}

message UpsertPersonResult {
  listenfield.repo.catalog.Person item = 1;
}

message QueryPersonResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.Person item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service Persons {
  rpc Upsert (UpsertPersonRequest) returns (UpsertPersonResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryPersonResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.Person);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertPersonRoleRequest {
  listenfield.repo.catalog.PersonRole item = 1;
}

message UpsertPersonRoleResult {
  listenfield.repo.catalog.PersonRole item = 1;
}

message QueryPersonRoleRequest {
  uint32 page_size = 1;
  string page_token = 2;
  string PersonId = 3;
  string GrowerId = 4;
  google.protobuf.Timestamp TimeStamp = 5; // Not implemened
  listenfield.repo.catalog.PersonRole.PersonRolesEnum.Value Role = 6;
  string CompanyId = 7;
}

message QueryPersonRoleResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.PersonRole item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service PersonRoles {
  rpc Upsert (UpsertPersonRoleRequest) returns (UpsertPersonRoleResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryPersonRoleResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.PersonRole);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}

message UpsertCompanyRequest {
  listenfield.repo.catalog.Company item = 1;
}

message UpsertCompanyResult {
  listenfield.repo.catalog.Company item = 1;
}

message QueryCompanyResult {
  oneof query_res_oneof {
    listenfield.repo.catalog.Company item = 1;
    listenfield.BatchedQueryMetadata queryMeta = 2;
  }
}

service Companies {
  rpc Upsert (UpsertCompanyRequest) returns (UpsertCompanyResult);
  rpc Query (listenfield.BatchedQueryRequest) returns (stream QueryCompanyResult);
  rpc Get (listenfield.SimpleGetRequest) returns (listenfield.repo.catalog.Company);
  rpc GetACL (listenfield.SimpleGetRequest) returns (listenfield.GrantList);
  rpc SetACL (listenfield.ChangeGrantsRequest) returns (stream listenfield.ChangeGrantsResult);
}
